Fix for button margin on mobile view (#433)
* fix: margin padding between buttons

On mobile view, the buttons were overlapping.

* fix: style

--- a/src/sweetalert2.scss
+++ b/src/sweetalert2.scss
@@ -124,6 +124,10 @@ body {
         cursor: no-drop;
       }
     }
+    
+    .swal2-styled + .swal2-styled {
+      margin-top: 15px;
+    }
 
     &.swal2-loading {
       box-sizing: border-box;
